페이지 선택창에 문자 입력시 처리 루틴 개선 설정 윈도우 기능 구현
ToDo:
첫 페이지와 마지막 페이지에서 스피너를 이용해 없는 페이지로 이동을 시도하는경우 무한루프 증상 해결
설정이 바뀐 경우, 바뀐 설정을 반영하여 사용자 화면 업데이트

--- a/src/res/layout/MainWindow.fxml
+++ b/src/res/layout/MainWindow.fxml
@@ -22,7 +22,7 @@
                 <Menu mnemonicParsing="false" text="메뉴">
                   <items>
                         <MenuItem mnemonicParsing="false" onAction="#openFile" text="파일 열기" />
-                    <MenuItem fx:id="settingsMenu" mnemonicParsing="false" onAction="#openSettingsMenu" text="설정" />
+                    <MenuItem mnemonicParsing="false" onAction="#openSettingsMenu" text="설정" />
                         <MenuItem mnemonicParsing="false" text="프로그램 정보" />
                   </items>
                 </Menu>
@@ -47,6 +47,7 @@
                   <Insets />
                </opaqueInsets>
             </Label>
+            <Button fx:id="changePage" mnemonicParsing="false" text="페이지 이동" />
          </children>
       </HBox>
    </top>
